bug: add test task at build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	useJUnitPlatform()
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
@@ -20,6 +24,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit'
     }
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 	
 	runtimeOnly 'org.springframework.boot:spring-boot-starter-thymeleaf'
